squashing bugs

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -20,3 +20,21 @@
   --background: #9d8770;
   --foreground: #ffffff;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #bba58d;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #c4ac92;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #6c857d;
+}
